fix: removed overflow from html to avoid quirks regarding 100vh

--- a/site/styles.css
+++ b/site/styles.css
@@ -8,6 +8,10 @@ html, body, p, h1, h2 {
   margin: 0;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   font-family: 'Roboto';
   color: rgb(var(--secondary));
